--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,16 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
+html, body {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #111127;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 canvas {
